--- a/index.html
+++ b/index.html
@@ -92,8 +92,18 @@
 </section>
 
 <section id="contact">
-	
-
+		 <h2>Contactează-ne</h2>
+		 
+	<form>
+		<input id="casuta"type="text" placeholder="Numele și prenumele dumnveastră"><br/>
+		<input id="casuta" type="email" placeholder="Email-ul dumnveastră"><br/>
+		<input id="casuta" type="text" placeholder="Numărul de telefon"><br/>
+		<textarea id="mesaj" type="text" placeholder="Write something.."></textarea> 
+	</form>
+		 <img id="teo-contact" src="teo_contact.png" align="right">
+		 <img id="edy-contact" src="edy_contact.jpg" align="right">
+		 <img id="oly-contact" src="oly_contact.png" align="right">
+	  
 </section>
 
 
