--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		</nav>
 	</header>
 	<section id="home">
+		 <img id="teo_back" src="edy_back.png" align="right">
+		 <img id="oly_back" src="oly_back.png" align="right">
+		 <img id="edy_back" src="edy_back.png" align="right">
 	</section>
 	<section id="about" align="middle">
 		<h1 id="about-title">Despre noi</h1>
@@ -46,30 +49,33 @@
 				<label><input id="radio1" type="radio" name="profesie">Profesor</label>
 				<label><input id="radio2" type="radio" name="profesie">Student</label>
 				
-				<form action="dataBase.txt" method="POST">
+				<form method="POST" action="formular.php">
 					<div>
 						<h2>Numele tău</h2>
 						<p>
-							<input id="chenar" type="text" placeholder="Pinguinescu L. Tuxy" name="nume">
+							<input id = "chenar-nume" class="chenar" type="text" placeholder="Pinguinescu L. Tuxy" name="nume" required>
+							<span class="error">*</span>
 						</p>
 					</div>
 
 					<div>
 						<h2>User</h2>
 						<p>
-							<input id="chenar" type="text" placeholder="Pinguinescu L. Tuxy" name="user">
+							<input id = "chenar-user" class="chenar" type="text" placeholder="Pinguinescu L. Tuxy" name="user" required>
+							<span class="error">*</span>
 						</p>
 					</div>
 
 					<div>
 						<h2>Password</h2>
 						<p>
-							<input id="chenar" type="password" placeholder="Pinguinescu L. Tuxy" name="Password">
+							<input class="chenar" type="password" placeholder="Pinguinescu L. Tuxy" name="password" required>
+							<span class="error">*</span>
 						</p>
 					</div>
 					
 					<br/>
-					<input class="submitButton" type="submit" value="Creare cont" target="top">
+					<input id="buton" class="submitButton" type="submit" value="Submit" target="top" name="submit">
 				</form>
 			</div>
 			<div style="float: right;" class="margin-log_in">
@@ -94,14 +100,16 @@
 <section id="contact">
 		 <h2>Contactează-ne</h2>
 		 
-	<form>
-		<input id="casuta"type="text" placeholder="Numele și prenumele dumnveastră"><br/>
-		<input id="casuta" type="email" placeholder="Email-ul dumnveastră"><br/>
-		<input id="casuta" type="text" placeholder="Numărul de telefon"><br/>
-		<textarea id="mesaj" type="text" placeholder="Write something.."></textarea> 
+	<form action="sendmail.php" method="POST">
+		<input id="casuta"type="text" placeholder="Numele și prenumele dumnveastră" name="name"><br/>
+		<input id="casuta" type="email" placeholder="Email-ul dumnveastră" name="email"><br/>
+		<input id="casuta" type="text" placeholder="Numărul de telefon" name="telefon"><br/>
+		<textarea id="mesaj" type="text" placeholder="Write something.." name="mesaj"></textarea> 
+		<br>
+		<input type="submit" class="contact-button">
 	</form>
 		 <img id="teo-contact" src="teo_contact.png" align="right">
-		 <img id="edy-contact" src="edy_contact.jpg" align="right">
+		 <img id="edy-contact" src="edy_contact.png" align="right">
 		 <img id="oly-contact" src="oly_contact.png" align="right">
 	  
 </section>
