--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-	<link rel='stylesheet' type='text/css' href="./responsive.css" media="all">
 	<link href="https://fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lobster+Two" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	<link rel='stylesheet' type='text/css' href="./style.css" media="all">
+		<link rel='stylesheet' type='text/css' href="./responsive.css" media="all">
 	<link href="https://fonts.googleapis.com/css?family=Exo+2:400i" rel="stylesheet">
 	<title>eStudy</title>
 	<meta charset="UTF-8">
@@ -31,16 +31,17 @@
 		 <img id="edy_back" src="edy_back.png" align="right">
 	</section>
 	<section id="about" align="middle">
-			<img id="teo" src="teo.png">
-				<h1 id="about-title">Despre noi</h1>
-				<img id="edy" src="edy.jpg">
-				<h2 id="about-text" >Suntem o echipă de studenți dedicați de la Facultatea de Informatică din Iași și am colaborat la acest proiect 
-					pentru a vă spori șansele de reușită în cadrul disciplinei <em>Tehnologii Veb</em> prin implentarea unor algoritmi care să vă țină mereu la curent cu
-					situația dumneavoastră.
-				</h2>
+	<img id="teo" src="teo.png">
+		<h1 id="about-title">Despre noi</h1>
+		<img id="edy" src="edy.jpg">
+		<h2 id="about-text" >Suntem o echipă de studenți dedicați de la Facultatea de Informatică din Iași și am colaborat la acest proiect 
+			pentru a vă spori șansele de reușită în cadrul disciplinei <em>Tehnologii Veb</em> prin implentarea unor algoritmi care să vă țină mereu la curent cu
+			situația dumneavoastră.
+		</h2>
 		
-				<img id="oly" src="oly.jpg" align="center">
-			</section>
+		<img id="oly" src="oly.jpg" align="center">
+		
+	</section>
 
 	<section id="logIn">
 
@@ -48,10 +49,10 @@
 			<div style="float:left;" class="margin-cont">
 
 				<h1>Creare cont</h1>
-				
+
 				<form method="POST" action="formular.php">
-						<label><input type="radio" name="profesor">Student</label>
-						<label><input type="radio" name="student">Profesor</label>
+				<label><input type="radio" name="student">Student</label>
+				<label><input type="radio" name="profesor">Profesor</label>
 					<div>
 						<h2>Numele tău</h2>
 						<p>
@@ -103,7 +104,7 @@
 		 <h2>Contactează-ne</h2>
 		 
 	<form action="sendmail.php" method="POST">
-		<input id="casuta"type="text" placeholder="Numele și prenumele dumnveastră" name="nume"><br/>
+		<input id="casuta"type="text" placeholder="Numele și prenumele dumnveastră" name="name"><br/>
 		<input id="casuta" type="email" placeholder="Email-ul dumnveastră" name="email"><br/>
 		<input id="casuta" type="text" placeholder="Numărul de telefon" name="telefon"><br/>
 		<textarea id="mesaj" type="text" placeholder="Write something.." name="mesaj"></textarea> 
