--- a/profesor.html
+++ b/profesor.html
@@ -4,8 +4,9 @@
     
     <meta charset="utf-8" />
     <title>Profesor</title>
+    
 </head>
 <body>
-    <h1>Salutare!</h1>
+    <h1>Salutare profesore!</h1>
 </body>
 </html>
