--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</section>
 	<section id="about" align="middle">
 	<img id="teo" src="teo.png">
-		<h1 id="about-title">Despre noi</h1>
+		<h1 id="about-title" style="text-align:center;">Despre noi</h1>
 		<img id="edy" src="edy.jpg">
 		<h2 id="about-text" >Suntem o echipă de studenți dedicați de la Facultatea de Informatică din Iași și am colaborat la acest proiect 
 			pentru a vă spori șansele de reușită în cadrul disciplinei <em>Tehnologii Veb</em> prin implementarea unor algoritmi care să vă țină mereu la curent cu
@@ -90,7 +90,7 @@
 				<br/>
 				
 				<div class="logo">
-					<img id = "student" src="./student.png" alt="student" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">
+					<img id = "student" src="./student.png" alt="student" onclick="document.getElementById('id01').style.display='block'">
 					<div id="id01" class="modal">
   
 							<form class="modal-content animate">
@@ -115,7 +115,7 @@
 							  </div>
 							</form>
 						  </div>
-					<img id = "student" src="profesor.png" alt="profesor" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">
+					<img id = "student" src="profesor.png" alt="profesor" onclick="document.getElementById('id02').style.display='block'">
 					<div id="id02" class="modal">
   
 							<form class="modal-content animate" action="/action_page.php">
