--- a/student.html
+++ b/student.html
@@ -3,10 +3,123 @@
 <head>
     
     <meta charset="utf-8" />
-    <title>Student</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' type='text/css' href="./studentStyle.css" media="all">
+    <link href="https://fonts.googleapis.com/css?family=Stalinist+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
+    <title>Student page</title>
     
 </head>
 <body>
-    <h1>Salutare!</h1>
+    <img id="student" src="student.png"> 
+    <button id="profil">Change photo</button>
+    <h1 id="nume"><center>Popescu Georgel</center></h1>
+    <nav class="cursuri">
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web01ArhitecturaWeb.pdf"><b>Curs1</b></a>
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web02ProgramareWeb-HTTP-CGI.pdf"><b>Curs2</b></a>
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web04DezvoltareaAplicatiilorWeb-InginerieWeb.pdf"><b>Curs3</b></a>
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web05DezvoltareaAplicatiilorWeb-PHP.pdf"><b>Curs4</b></a>
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web05DezvoltareaAplicatiilorWeb-PHP.pdf"><b>Curs5</b></a>
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/web-film.html#week6"><b>Curs6</b></a>	
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web07ModelareXML-XPath-ValidariXML-DTD.pdf"><b>Curs7</b></a>
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/projects/xml-transform.php?pag=projects"><b>Proiect</b></a>
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web08ProcesariXML-DOM.pdf"><b>Curs8</b></a>	
+        <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web08ProcesariXML-DOM.pdf"><b>Curs9</b></a>
+    </nav>
+    <h2 id="activitate">Activitate externa</h2>
+    <br/>
+    <img id="facebook" src="facebook.png">
+    <div id="login">
+    <a href="ceva"  style="text-decoration: none;">Login facebook </a> 
+    <button id="facebook-activity">10</button>
+    </div>
+    <br/> 
+    <img id="github" src="github.png">
+    <div id="login">
+    <a href="ceva" style="text-decoration: none;">Login github</a>
+    <button id="github-activity">10</button> 
+    </div>
+    <h2 id="situatie">Situatie scolara</h2>
+
+    <table id="tabelas">
+        <tr>
+            <th> </th>
+            <th>Activitate</th>
+            <th>Prezenta</th>
+            <th>Proiect</th>
+            <th>Teste</th>
+        </tr>
+        <tr>
+            <th>Saptamana 1</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <th>Saptamana 2</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <th>Saptamana 3</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <th>Saptamana 4</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <th>Saptamana 5</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <th>Saptamana 6</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <th>Saptamana 7</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <th>Saptamana 8</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <th>Saptamana 9</th>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+    </table>
+
+    <p id="total">Total:</p>
+<div id="prom">
+    <h2>Procent de promovabilitate: x%</h2>
+    <p>link</p>
+    <p>link</p>
+    <p>link</p>
+</div>
 </body>
 </html>
