--- a/student.html
+++ b/student.html
@@ -11,8 +11,7 @@
     
 </head>
 <body>
-    <img id="student" src="student.png"> 
-    <button id="profil">Change photo</button>
+    <img src="student_back.jpg" id="poza">
     <h1 id="nume"><center>Popescu Georgel</center></h1>
     <nav class="cursuri">
         <a href="https://profs.info.uaic.ro/~busaco/teach/courses/web/presentations/web01ArhitecturaWeb.pdf"><b>Curs1</b></a>
