--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lobster+Two" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	<link rel='stylesheet' type='text/css' href="./style.css" media="all">
+	<link rel='stylesheet' type='text/css' href="./responsive.css" media="all">
 	<!--
 		<link rel='stylesheet' type='text/css' href="./responsive.css" media="all">
 	-->
