--- a/student.html
+++ b/student.html
@@ -34,7 +34,7 @@
     </div>
     <br/> 
     <img id="github" src="github.png">
-    <div id="login">
+    <div id="login1">
     <a href="ceva" style="text-decoration: none;">Login github</a>
     <button id="github-activity">10</button> 
     </div>
