--- a/profesor.html
+++ b/profesor.html
@@ -16,56 +16,21 @@
 </head>
 <body onload="setName()">
     <img src="prof_back.jpg" id="poza">
-    <button id="logOutS"  onclick="logout()">log out </button>
+    <button type="button" id="logOutS" style="position: relative; margin-left:90%; margin-top:5%;" onclick="logout2()">log out </button>
     <center><h1 id="nume"></h1></center>
     <center><h2 id="situatie">Administrarea situatiei studentilor</h2></center>
-    <div class="selectare slate mutare">
-        <select id="select1">
-            <option>Semian</option>
-            <option value="A">A</option>
-            <option value="B">B</option>
-        </select>
-        </div>
-        <div class="selectare slate move-select2">
-        <select id="select2">
-                <option>Grupa</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-            </select>
-        </div>
-        <div class="selectare slate move-select3">
-            <select id="select3">
-                    <option>Saptamana</option>
-                    <option value="s1">1</option>
-                    <option value="s2">2</option>
-                    <option value="s3">3</option>
-                    <option value="s4">4</option>
-                    <option value="s5">5</option>
-                    <option value="s6">6</option>
-                    <option value="s7">7</option>
-                    <option value="s8">8</option>
-                    <option value="s9">9</option>
-                </select>
-            </div>
-        <a href="grupa1.html"><button id="clickMe" type="button" onclick="myFunction()">Administreaza</button></a>
-
+    <form style="position:relative;" action="studentsPrint.php" method="post">
+      Semian:
+      <input type="text" placeholder="A, B" name="semian">
+      Grupa:
+      <input type="number" placeholder="1,2,3,4,5" name="grupa">
+      Saptamana:
+      <input type="number" placeholder="1,2,3,4,5,6,7,8,9,10,11,12,13,14" name="saptamana">
+        <button id="clickMe" type="submit">Administreaza</button>
+      </form>
 <br>
 
 
-
-    <script>
-        function myFunction(){
-            if(document.getElementById('mySelect').value == "sarmale"){
-                window.open("student.html");
-            }
-
-        }
-    </script>
     <script>
     function getProfCookieName() {
         var name = "Profname" + "=";
@@ -95,14 +60,23 @@
     }
     </script>
 <script>
-function logout(){
+function logout2(){
   document.cookie = "Profusername" + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
   document.cookie = "Profpassword" + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
   document.cookie = "Profname" + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
-  window.open("index.html","_self");
+  window.open("./index.html","_self");
 
 }
+
+
 </script>
 
 </body>
 </html>
+
+
+ <!-- <script>
+var semian = document.getElementById('select1');
+var grupa = document.getElementById('select2');
+var saptamana = document.getElementById('select3');
+</script>  -->
